[gd_scene load_steps=3 format=3 uid="uid://dxpp6a3ro7tdl"]

[ext_resource type="Script" path="res://Win.gd" id="1_rlyis"]
[ext_resource type="AudioStream" uid="uid://njygkscvb35p" path="res://Sounds/Win.wav" id="2_0a203"]

[node name="Win" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -1.0
offset_top = 3.0
offset_right = -1.0
offset_bottom = 3.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_rlyis")

[node name="PanelContainer" type="PanelContainer" parent="."]
self_modulate = Color(1, 1, 1, 0.470588)
layout_mode = 0
offset_left = 315.0
offset_top = 204.0
offset_right = 867.0
offset_bottom = 341.0

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
text = "Game Over! You Win! You have protected the galaxy! :)"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Resume" type="Button" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
text = "Resume Game!"

[node name="Restart" type="Button" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
text = "Restart Game!"

[node name="Quit" type="Button" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
text = "Quit Game!"

[node name="Stopwatch" type="Label" parent="." groups=["Game"]]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 432.0
offset_top = -213.0
offset_right = 590.0
offset_bottom = -188.0
grow_vertical = 0
scale = Vector2(2, 2)
text = "Best Time: 00:00:000"
vertical_alignment = 1

[node name="HighScore" type="Label" parent="."]
layout_mode = 0
offset_left = 401.0
offset_top = 368.0
offset_right = 581.0
offset_bottom = 391.0
scale = Vector2(2, 2)
text = "High Score:"

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("2_0a203")
volume_db = 3.0
autoplay = true

[connection signal="pressed" from="PanelContainer/VBoxContainer/Resume" to="." method="_on_resume_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/Restart" to="." method="_on_restart_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/Quit" to="." method="_on_quit_pressed"]
